--- a/RoundAboutMVC/Views/Home/Index.cshtml
+++ b/RoundAboutMVC/Views/Home/Index.cshtml
@@ -11,6 +11,7 @@
                 <ul class="fa-ul pt-2 checklist">
                     <li><span class="fa-li"><i class="fas fa-check-square me-2"></i></span>CSS SASS Bootstrap Layout</li>
                     <li><span class="fa-li"><i class="fas fa-check-square me-2"></i></span>ASP.NET MVC</li>
+                    <li><span class="fa-li"><i class="fas fa-check-square me-2"></i></span>Entity Framework</li>
                     <li><span class="fa-li"><i class="fas fa-check-square me-2"></i></span>C# Fundamentals</li>
                     <li><span class="fa-li"><i class="fas fa-check-square me-2"></i></span>C# Loops</li>
                     <li><span class="fa-li"><i class="fas fa-check-square me-2"></i></span>C# Functions</li>
@@ -19,7 +20,7 @@
                     <li><span class="fa-li"><i class="fas fa-check-square me-2"></i></span>C# Boolean Logic</li>
                 </ul>
                 <div>
-                    <a type="button" class="btn btn-outline-dark btn-lg px-4 me-md-2" asp-controller="Home" asp-action="Reverse">Try It Out!</a>
+                    <a type="button" class="btn btn-outline-dark btn-lg px-4 me-md-2" asp-controller="Home" asp-action="FBPage">Try It Out!</a>
                 </div>
                 <div class="fw-bold mt-5">
                     <div class="d-flex">
