--- a/RoundAboutMVC/Views/Home/FBPage.cshtml
+++ b/RoundAboutMVC/Views/Home/FBPage.cshtml
@@ -1,4 +1,7 @@
 ﻿
+@model RoundAboutMVC.Models.RoundAbout
+
+
 <div class="container">
     <div class="row row-cols-1 row-cols-lg-2">
         <div class="col-lg-4 border-end border-2">
@@ -48,7 +51,7 @@
         </div>
         <div class="col-lg-8">
             <h5>Enter Values</h5>
-            <form class="row row-cols-1 row-cols-lg-2 gy-2 gx-3">
+            <form asp-controller="Home" asp-action="FBPage" method="post" class="row row-cols-1 row-cols-lg-2 gy-2 gx-3">
                 <div class="col">
                     <label>Enter the starting number.</label>
                     <input id="startValue" min="1" max="100" type="number" class="form-control" placeholder="Start Value" value="1" aria- label="Start Value">
@@ -83,7 +86,7 @@
                         <option value="3" class="ps-1 pe-1">Ternary Operator Version</option>
                     </select>
                     <div class="input-group-append">
-                        <button type="button" id="btnSubmit" class="btn btn-dark btn-lg">Display RoundAbout</button>
+                        <button type="submit" id="btnSubmit" class="btn btn-dark btn-lg">Display RoundAbout</button>
                     </div>
                 </div>
                 <!-- <div class="col-12 col-lg-12 d-flex justify-content-start justify-content-lg-end">
@@ -94,6 +97,17 @@
             <table class="table table-striped table-sm">
                 <tbody id="results">
                     <!-- results go here -->
+                    @if(@Model.Result.Count > 0){
+                        <table class="table table-striped table-hover table-dark">
+                            <thead><tr><th class="colspan=5">Results</th></tr></thead>
+                            <tbody>
+                            @for (int i = 0; i < Model.Result.Count(); i += 5)
+                            {
+                                    <tr><td>@Model.Result[i]</td><td>@Model.Result[i + 1]</td><td>@Model.Result[i + 2]</td><td>@Model.Result[i + 3]</td><td>@Model.Result[i + 4]</td></tr>
+                            }
+                            </tbody>
+                        </table>   
+                    }
                 </tbody>
             </table>
             <h5 id="codeLink"></h5>
