--- a/RoundAboutMVC/Views/Shared/_Layout.cshtml
+++ b/RoundAboutMVC/Views/Shared/_Layout.cshtml
@@ -28,11 +28,12 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Code">The Code</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" target="_blank" href="">Git Repo</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" target="_blank" href="">About</a>
+                <li class="nav-item">
+                    <a class="nav-link" target="_blank" href="https://davidbellerose.com/#about">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" target="_blank" href="https://github.com/daveyedgar/Roundabout">Git Repo</a>
+                </li>
                     </ul>
                 </div>
             </div>
@@ -57,14 +58,15 @@
                 <div class="col d-flex align-items-center justify-content-start justify-content-lg-end">
                     <div class="row">
                         <div class="col social">
-                            <a href="https://www.linkedin.com/in/david-bellerose" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin fa-2x"></i></a>
-                        </div>
-                        <div class="col social">
-                            <a href="https://twitter.com/DavidEBellerose" target="_blank" rel="noopener noreferrer"><i class="fab fa-github fa-2x"></i></a>
-                        </div>
-                        <div class="col social">
-                            <a href="https://github.com/daveyedgar" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter fa-2x"></i></a>
-                        </div>
+                            <div class="col social">
+                                <a href="www.linkedin.com/in/david-bellerose" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin fa-2x"></i></a>
+                            </div>
+                            <div class="col social">
+                                <a href="https://twitter.com/DavidEBellerose" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter fa-2x"></i></a>
+                            </div>
+                            <div class="col social">
+                                <a href="https://github.com/daveyedgar" target="_blank" rel="noopener noreferrer"><i class="fab fa-github fa-2x"></i></a>
+                            </div>
                     </div>
                 </div>
             </div>
