--- a/RoundAboutMVC/Views/Home/FBPage.cshtml
+++ b/RoundAboutMVC/Views/Home/FBPage.cshtml
@@ -34,10 +34,6 @@
                     that will replace the number in the second multiple(number) field.
                 </li>
                 <li>
-                    In the dropdown list choose which version of the code you would like to run.
-                    All three versions will produce the same result.
-                </li>
-                <li>
                     Click on the "Display RoundAbout" button. This will display the results of the RoundAbout.
                     Note that any numbers that are a multiple of both the first and second multiples(numbers)
                     will display both of the words that you entered.
@@ -51,22 +47,22 @@
         </div>
         <div class="col-lg-8">
             <h5>Enter Values</h5>
-            <form asp-controller="Home" asp-action="FBPage" method="post" class="row row-cols-1 row-cols-lg-2 gy-2 gx-3">
+            <form asp-controller="Home" id="raForm" asp-action="FBPage" method="post" class="row row-cols-1 row-cols-lg-2 gy-2 gx-3">
                 <div class="col">
                     <label>Enter the starting number.</label>
-                    <input id="startValue" min="1" max="100" type="number" class="form-control" placeholder="Start Value" value="1" aria- label="Start Value">
+                    <input id="startValue" asp-for="StartValue" min="1" max="100" type="number" class="form-control" placeholder="Start Value" value="@Model.StartValue" aria- label="Start Value">
                 </div>
                 <div class="col">
                     <label>Enter the ending number.</label>
-                    <input id="endValue" min="1" max="100" type="number" class="form-control" placeholder="Start Value" value="100" aria- label="Start Value">
+                    <input id="endValue" asp-for="EndValue" min="1" max="100" type="number" class="form-control" placeholder="Start Value" value="@Model.EndValue" aria- label="End Value">
                 </div>
                 <div class="col">
                     <label>Enter the first word.</label>
-                    <input id="firstWord" type="text" class="form-control" placeholder="First Word" value="Round" aria- label="First Word">
+                    <input id="firstWord" asp-for="FirstWord" type="text" class="form-control" placeholder="First Word" value="@Model.FirstWord" aria- label="First Word">
                 </div>
                 <div class="col">
                     <label>Enter the second word.</label>
-                    <input id="secondWord" type="text" class="form-control" placeholder="Second Word" value="About" aria- label="Second Word">
+                    <input id="secondWord" asp-for="LastWord" type="text" class="form-control" placeholder="Second Word" value="@Model.LastWord" aria- label="Second Word">
                 </div>
                 <div class="col">
                     <label>Enter the multiple(number) you want replaced by the first word.</label>
@@ -76,22 +72,11 @@
                     <label>Enter the multiple(number) you want replaced by the second word.</label>
                     <input id="roundValue" asp-for="AboutValue" type="number" class="form-control" placeholder="Round Value" value="@Model.AboutValue" aria- label="Round Value">
                 </div>
-                <div class="col-12 col-lg-12 d-flex justify-content-start justify-content-lg-end mt-5">
-                    Choose which version of the code you would like to run.
-                </div>
                 <div class="input-group col-12 col-lg-12 d-flex justify-content-start justify-content-lg-end">
-                    <select class="custom-select" id="inputGroupSelect">
-                        <option value="1" class="ps-1 pe-1">If/Then/Else Version</option>
-                        <option value="2" class="ps-1 pe-1">Switch Case Version</option>
-                        <option value="3" class="ps-1 pe-1">Ternary Operator Version</option>
-                    </select>
-                    <div class="input-group-append">
+                        <div class="input-group-append">
                         <button type="submit" id="btnSubmit" class="btn btn-dark btn-lg">Display RoundAbout</button>
                     </div>
                 </div>
-                <!-- <div class="col-12 col-lg-12 d-flex justify-content-start justify-content-lg-end">
-                    <button type="button" id="btnSubmit" class="btn btn-dark btn-lg">Display RoundAbout</button>
-                </div> -->
             </form>
             <h2 class="mt-5 border-bottom border-2">Results</h2>
             <table class="table table-striped table-sm">
@@ -101,16 +86,15 @@
                         <table class="table table-striped table-hover table-dark">
                             <thead><tr><th class="colspan=5">Results</th></tr></thead>
                             <tbody>
-                            @for (int i = 0; i < Model.Result.Count(); i += 5)
+                            @for (int i = 0; i < Model.Result.Count(); i++)
                             {
-                                    <tr><td>@Model.Result[i]</td><td>@Model.Result[i + 1]</td><td>@Model.Result[i + 2]</td><td>@Model.Result[i + 3]</td><td>@Model.Result[i + 4]</td></tr>
+                                    <tr><td>@Model.Result[i]</td></tr>
                             }
                             </tbody>
                         </table>   
                     }
                 </tbody>
             </table>
-            <h5 id="codeLink"></h5>
         </div>
     </div>
 </div>
