--- a/RoundAboutMVC/Views/Shared/_Layout.cshtml
+++ b/RoundAboutMVC/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - RoundAboutMVC</title>
+    <title>@ViewData["Title"] - RoundAbout in C# .NET MVC</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="~/assets/css/site.min.css" />
     <link href="~/assets/img/favicon_a.svg" rel="icon">
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">RoundAboutMVC</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">RoundAbout in C# .NET MVC</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -44,12 +44,13 @@
     </main>
 
 
+
     <footer class="footer mt-auto py-3 bg-dark sticky-footer text-light">
         <div class="container-fluid">
             <div class="row row-cols-1 row-cols-lg-3 gy-2">
                 <div class="col text-light order-last order-lg-first">
                     <div>
-                        <span class="text-light">&copy;2022</span> David Bellerose | david@davidbellerose.com
+                        <span class="text-muted">&copy;2022</span> David Bellerose | david@davidbellerose.com
                     </div>
                 </div>
                 <div class="col d-flex align-items-center justify-content-start justify-content-lg-center">
@@ -58,24 +59,23 @@
                 <div class="col d-flex align-items-center justify-content-start justify-content-lg-end">
                     <div class="row">
                         <div class="col social">
-                            <div class="col social">
-                                <a href="www.linkedin.com/in/david-bellerose" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin fa-2x"></i></a>
-                            </div>
-                            <div class="col social">
-                                <a href="https://twitter.com/DavidEBellerose" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter fa-2x"></i></a>
-                            </div>
-                            <div class="col social">
-                                <a href="https://github.com/daveyedgar" target="_blank" rel="noopener noreferrer"><i class="fab fa-github fa-2x"></i></a>
-                            </div>
+                            <a href="www.linkedin.com/in/david-bellerose" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin fa-2x"></i></a>
+                        </div>
+                        <div class="col social">
+                            <a href="https://twitter.com/DavidEBellerose" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter fa-2x"></i></a>
+                        </div>
+                        <div class="col social">
+                            <a href="https://github.com/daveyedgar" target="_blank" rel="noopener noreferrer"><i class="fab fa-github fa-2x"></i></a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+            </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/45e2949365.js" crossorigin="anonymous"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/assets/js/site.js" asp-append-version="true"></script>
     <script src="~/assets/vendor/prism/prism.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
