--- a/RoundAboutMVC/Views/Shared/_Layout.cshtml
+++ b/RoundAboutMVC/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">RoundAbout in C# .NET MVC</a>
+                <a class="navbar-brand" target="_blank" href="https://davidbellerose.com"><img src="assets/img/favicon_a.svg" class="d-inline-block align-text-top me-2">RoundAbout in C# .NET MVC</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
