--- a/Views/Home/Code.cshtml
+++ b/Views/Home/Code.cshtml
@@ -1,9 +1,9 @@
 ﻿
-<main class="flex-shrink-0 mt-5">
+
     <div class="container py-4 px-5 mt-5">
-        <h2 class="border-1 border-bottom border-dark">The Code for TATTARRATTAT in C# .NET</h2>
+    <h2 class="border-1 border-bottom border-dark mt-5">The Code for RoundAbout</h2>
         <div class="row row-cols-1 row-cols-lg-2">
-            <div class="col-lg-8">
+            <div class="col-lg-8 order-lg-1 order-2">
                 <h4 class="mt-4 pt-4">The Model</h4>
                 <pre class="line-numbers">
                 <code class="language-javascript">
@@ -135,7 +135,7 @@ public IActionResult FBPage(RoundAbout roundAbout)
                 </code>
             </pre>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 order-lg-2 order-1">
                 <h4 class="mt-4 pt-4">This code is structured using the MVC model.</h4>
                 <h5 class="mt-4 pt-4">The Model</h5>
                 <p>
@@ -167,4 +167,4 @@ public IActionResult FBPage(RoundAbout roundAbout)
             </div>
         </div>
     </div>
-</main>
+
