--- a/Views/Home/FBPage.cshtml
+++ b/Views/Home/FBPage.cshtml
@@ -66,11 +66,11 @@
                 </div>
                 <div class="col">
                     <label>Enter the multiple(number) you want replaced by the first word.</label>
-                    <input id="roundValue" asp-for="RoundValue" type="number" class="form-control" placeholder="Round Value" value="@Model.RoundValue" aria- label="Round Value">
+                    <input id="roundValue" asp-for="RoundValue" min="1" max="100" type="number" class="form-control" placeholder="Round Value" value="@Model.RoundValue" aria- label="Round Value">
                 </div>
                 <div class="col">
                     <label>Enter the multiple(number) you want replaced by the second word.</label>
-                    <input id="roundValue" asp-for="AboutValue" type="number" class="form-control" placeholder="Round Value" value="@Model.AboutValue" aria- label="Round Value">
+                    <input id="roundValue" asp-for="AboutValue" min="1" max="100" type="number" class="form-control" placeholder="Round Value" value="@Model.AboutValue" aria- label="Round Value">
                 </div>
                 <div class="input-group col-12 col-lg-12 d-flex justify-content-start justify-content-lg-end">
                         <div class="input-group-append">
@@ -81,7 +81,6 @@
             <h2 class="mt-5 border-bottom border-2">Results</h2>
             <table class="table table-striped table-sm">
                 <tbody id="results">
-                    <!-- results go here -->
                     @if(@Model.Result.Count > 0){
                         <table class="table table-striped table-hover table-dark">
                             <thead><tr><th class="colspan=5">Results</th></tr></thead>
