--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,24 +3,29 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - RoundAbout in C# .NET MVC</title>
+    <title>@ViewData["Title"] - RoundAbout</title>
+    <!-- preload hero image -->
+    <link rel="preload" as="image" href="./assets/img/roundabout.svg"></link>    
+    <!-- Favicons -->
+    <link href="~/assets/img/dblogo.svg" rel="icon" />
+    <link href="~/assets/img/dblogo.svg" rel="apple-touch-icon" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="~/assets/css/site.min.css" />
-    <link href="~/assets/img/favicon_a.svg" rel="icon">
+
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+    <header class="mb-5">
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top text-light">
             <div class="container">
-                <a class="navbar-brand" target="_blank" href="https://davidbellerose.com"><img src="assets/img/favicon_a.svg" class="d-inline-block align-text-top me-2"></a>RoundAbout in C# .NET MVC
+                <a class="navbar-brand" target="_blank" href="https://davidbellerose.com"><img src="~/assets/img/dblogo.svg" height="25" class="d-inline-block align-text-top me-2"></a><span class="text-light pe-4">RoundAbout</span>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                <div class="navbar-collapse collapse d-md-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="FBPage">The App</a>
@@ -29,7 +34,7 @@
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Code">The Code</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" target="_blank" href="https://github.com/daveyedgar/Roundabout">Git Repo</a>
+                            <a class="nav-link" target="_blank" href="https://github.com/daveyedgar/RoundAboutMVC">Git Repo</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" target="_blank" href="https://davidbellerose.com/#about">About</a>
@@ -37,12 +42,17 @@
                         <li class="nav-item">
                             <a class="nav-link" target="_blank" href="https://davidbellerose.com/#contact">Contact</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" target="_blank" href="https://tattarrattat-javascript.netlify.app/">
+                                <img src="~/assets/img/go-to-js.png" width="175" />
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-    <main id="content" class="flex-shrink-0">
+    <main id="content" class="flex-shrink-0 mt-5">
         @RenderBody()
     </main>
 
@@ -51,18 +61,21 @@
     <footer class="footer mt-auto py-3 bg-dark sticky-footer text-light">
         <div class="container-fluid">
             <div class="row row-cols-1 row-cols-lg-3 gy-2">
-                <div class="col text-light order-last order-lg-first">
+                <div class="col text-light order-last order-lg-first d-flex justify-content-center justify-content-lg-start">
                     <div>
-                        <span class="text-muted">&copy;2022</span> David Bellerose | david@davidbellerose.com
+                        <span>&copy;2022</span> David Bellerose |
+                        <a class="ms-2" href="https://davidbellerose.com/privacy.html" target="_blank">Privacy</a> |
+                        <a class="ms-2" href="https://davidbellerose.com/terms.html" target="_blank">Terms & Conditions</a> |
+                        <a class="ms-2" href="https://davidbellerose.com/cookies.html" target="_blank">Cookie Policy</a> |
                     </div>
                 </div>
-                <div class="col d-flex align-items-center justify-content-start justify-content-lg-center">
-                    <img src="assets/img/logo.svg" alt="David Bellerose Logo" height="24">
+                <div class="col d-flex align-items-center justify-content-center">
+                    <a href="https://www.davidbellerose.com" target="_blank" rel="noopener noreferrer"><img src="~/assets/img/dblogo.svg" alt="David Bellerose Logo" height="25"></a>
                 </div>
-                <div class="col d-flex align-items-center justify-content-start justify-content-lg-end">
+                <div class="col d-flex align-items-center justify-content-center justify-content-lg-end">
                     <div class="row">
                         <div class="col social">
-                            <a href="www.linkedin.com/in/david-bellerose" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin fa-2x"></i></a>
+                            <a href="https://www.linkedin.com/in/david-bellerose" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin fa-2x"></i></a>
                         </div>
                         <div class="col social">
                             <a href="https://twitter.com/DavidEBellerose" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter fa-2x"></i></a>
@@ -75,8 +88,9 @@
             </div>
         </div>
     </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/45e2949365.js" crossorigin="anonymous"></script>
     <script src="~/assets/js/site.js" asp-append-version="true"></script>
     <script src="~/assets/vendor/prism/prism.js"></script>
