--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -24,16 +24,16 @@
                 </div>
             </div>
             <div class="colr">
-            <img src="assets/img/roundabout.svg" class="img-fluid" alt="App Logo">
+            <img src="~/assets/img/roundabout.svg" class="img-fluid" alt="App Logo">
             <div class="fw-bold mt-5">
                 <div class="d-flex">
                     <div class="row project-icons g-2">
-                        <div class="col"><img src="assets/img/html5icon.svg"></div>
-                        <div class="col"><img src="assets/img/css3icon.svg"></div>
-                        <div class="col"><img src="assets/img/sassicon.svg"></div>
-                        <div class="col"><img src="assets/img/bootstrapicon.svg"></div>
-                        <div class="col"><img src="assets/img/csharpicon.svg"></div>
-                        <div class="col"><img src="assets/img/dotneticon.svg"></div>
+                        <div class="col"><img src="~/assets/img/html5icon.svg"></div>
+                        <div class="col"><img src="~/assets/img/css3icon.svg"></div>
+                        <div class="col"><img src="~/assets/img/sassicon.svg"></div>
+                        <div class="col"><img src="~/assets/img/bootstrapicon.svg"></div>
+                        <div class="col"><img src="~/assets/img/csharpicon.svg"></div>
+                        <div class="col"><img src="~/assets/img/dotneticon.svg"></div>
                     </div>
                 </div>
             </div>
