--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - RoundAbout</title>
     <!-- preload hero image -->
-    <link rel="preload" as="image" href="./assets/img/roundabout.svg"></link>    
+    <link rel="preload" as="image" href="~/assets/img/roundabout.svg"></link>    
     <!-- Favicons -->
     <link href="~/assets/img/dblogo.svg" rel="icon" />
     <link href="~/assets/img/dblogo.svg" rel="apple-touch-icon" />
@@ -43,7 +43,7 @@
                             <a class="nav-link" target="_blank" href="https://davidbellerose.com/#contact">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" target="_blank" href="https://tattarrattat-javascript.netlify.app/">
+                            <a class="nav-link" target="_blank" href="https://roundabout-javascript.netlify.app/">
                                 <img src="~/assets/img/go-to-js.png" width="175" />
                             </a>
                         </li>
