--- a/Views/Home/FBPage.cshtml
+++ b/Views/Home/FBPage.cshtml
@@ -5,7 +5,7 @@
 <div class="container">
     <div class="row row-cols-1 row-cols-lg-2">
         <div class="col-lg-4 border-end border-2">
-            <h1>RoundAbout: An ASP.NET C# Coding Project</h1>
+            <h1>RoundAbout<br />An ASP.NET C# Coding Project</h1>
             <h4 class="lead">This app is a modified version of the infamous FizzBuzz.</h4>
             <p>
                 The FizzBuzz algorithm will list a series of numbers, typically from 1 to 100.
