--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     <div class="container col-xxl-8 px-4 py-5">
         <div class="row g-5 py-5 row-cols-1 row-cols-lg-2">
             <div class="col order-last order-lg-first">
-                <h1 class="display-5 fw-bold 1h-1 mb-3">RoundAbout: A Coding Project</h1>
+                <h1 class="display-5 fw-bold 1h-1 mb-3">RoundAbout<br />A Coding Project</h1>
                 <h4 class="lead">An ASP.NET C# fizzbuzz app.</h4>
                 <ul class="fa-ul pt-2 checklist">
                     <li><span class="fa-li"><i class="fas fa-check-square me-2"></i></span>CSS SASS Bootstrap Layout</li>
